--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    
+    <header class="header">
+        <p id="winStreak">WIN STREAK: 999</p>
+        <p id="winPercentage">WIN PERCENTAGE: 50%</p>
+    </header>
+    <main>
+        <div id="options">
+            <button>Rock</button>
+            <button>Paper</button>
+            <button>Scissors</button>
+        </div>
+        <div id="text">
+            <p id="selection">Choose your weapon</p>
+            <p id="result">You lose!</p>
+        </div>
+    </main>
 </body>
 </html>
