--- a/index.html
+++ b/index.html
@@ -4,23 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 </head>
 <body>
     <main>
-        <section class="topbar">
-            <p>highest win streak: </p>
-            <p>current win steak: </p>
-        </section>
-        <section class="options">
-            <button class="option">Rock</button>
-            <button class="option">Paper</button>
-            <button class="option">Scissors</button>
-        </section>
-        <section class="playagain">
-            <button class="playagainBtn">Play Again?</button>
-        </section>
+    <button id="rockBtn">ROCK</button>
+    <button id="paperBtn">PAPER</button>
+    <button id="scissorsBtn">SCISSORS</button>
+    <p id="results"></p>
     </main>
 </body>
 </html>
