--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <main>
-    <button id="rockBtn">ROCK</button>
-    <button id="paperBtn">PAPER</button>
-    <button id="scissorsBtn">SCISSORS</button>
-    <p id="results"></p>
+    <main id="main">
+        <button id="rockBtn">ROCK</button>
+        <button id="paperBtn">PAPER</button>
+        <button id="scissorsBtn">SCISSORS</button>
+        <p id="results"></p>
     </main>
 </body>
 </html>
